refactor: midnight theme, subtle output, command history, usage, and silent actions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="terminal-container"></div>
-    <script src="script.js"></script>
+    <script type="module" src="terminal.js"></script>
 </body>
 
 </html>
