--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div id="terminal-container"></div>
-    <script type="module" src="terminal.js"></script>
+    <script src="assets/crypto-js.min.js"></script>
+    <script src="terminal.js"></script>
 </body>
 
 </html>
