refactor: simplifying commands structure and fixing import mechanism for Pages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div id="terminal-container"></div>
     <script src="assets/crypto-js.min.js"></script>
+    <script src="assets/commands.js"></script>
     <script src="terminal.js"></script>
 </body>
 
