--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="terminal-container"></div>
     <script src="assets/crypto-js.min.js"></script>
     <script src="assets/commands.js"></script>
-    <script src="terminal.js"></script>
+    <script src="assets/terminal.js"></script>
 </body>
 
 </html>
